--- a/it_buy/frontend/.env.production
+++ b/it_buy/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_BASEURL = "https://muahang.astahealthcare.com"
+VITE_BASEURL = "https://purchase.astahealthcare.com"
 VITE_ESIGNURL = "https://esign.astahealthcare.com"
