--- a/it_buy/appsettings.Production.json
+++ b/it_buy/appsettings.Production.json
@@ -21,7 +21,7 @@
     "Domain": "astahealthcare.com",
     "Expire": 60
   },
-  "Roles": [ "Administrator", "User","Manager Task" ],
+  "Roles": [ "Administrator", "User" ],
   "CheckAuth": "https://esign.astahealthcare.com/api/checklogin",
   "ConnectionStrings": {
     "ItConnection": "data source=Database;initial catalog=Buy;persist security info=True;user id=webservice;password=!@#GMP_it123;MultipleActiveResultSets=True;",
