--- a/it_buy/it_buy.csproj
+++ b/it_buy/it_buy.csproj
@@ -36,6 +36,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.32" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
+		<PackageReference Include="QRCoder" Version="1.4.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<!-- Don't publish the SPA source files, but do show them in the project files list -->
@@ -45,6 +46,9 @@
 	</ItemGroup>
 	<ItemGroup>
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\web.pubxml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="Views\Emails\NewComment.cshtml" />
 	</ItemGroup>
 	<Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
 		<!-- Ensure Node.js is installed -->
