--- a/it_buy/appsettings.Development.json
+++ b/it_buy/appsettings.Development.json
@@ -23,7 +23,7 @@
     "Domain": "localhost",
     "Expire": 60
   },
-  "Roles": [ "Administrator" ],
+  "Roles": [ "Administrator", "User" ],
   "CheckAuth": "https://esign.pymepharco.com/api/checklogin",
   "ConnectionStrings": {
     "ItConnection": "data source=localhost;initial catalog=Buy;persist security info=True;user id=sa;password=!PMP_it123456;MultipleActiveResultSets=True;",
