đánh giá nhà cung cấp

--- a/it_buy/appsettings.Production.json
+++ b/it_buy/appsettings.Production.json
@@ -24,7 +24,7 @@
   "Roles": [ "Administrator", "User" ],
   "CheckAuth": "https://esign.astahealthcare.com/api/checklogin",
   "ConnectionStrings": {
-    "ItConnection": "data source=Database;initial catalog=Buy;persist security info=True;user id=webservice;password=!@#GMP_it123;MultipleActiveResultSets=True;",
-    "EsignConnection": "data source=Database;initial catalog=OrgData;persist security info=True;user id=webservice;password=!@#GMP_it123;MultipleActiveResultSets=True;"
+    "ItConnection": "data source=Database;initial catalog=Buy;persist security info=True;user id=webservice;password=!@#Adgmp123;MultipleActiveResultSets=True;",
+    "EsignConnection": "data source=Database;initial catalog=OrgData;persist security info=True;user id=webservice;password=!@#Adgmp123;MultipleActiveResultSets=True;"
   }
 }
