--- a/it_buy/it_buy.csproj
+++ b/it_buy/it_buy.csproj
@@ -14,10 +14,11 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="FreeSpire.Office" Version="8.2.0" />
+		<PackageReference Include="FreeSpire.XLS" Version="14.2.0" />
+		<PackageReference Include="LinqKit" Version="1.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.5" />
 		<PackageReference Include="CertificateManager" Version="1.0.8" />
 		<PackageReference Include="ColorHashSharp" Version="1.0.0" />
-		<PackageReference Include="FreeSpire.XLS" Version="12.2.0" />
 		<PackageReference Include="itext7" Version="7.2.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.5" />
