update DN XUẤT VẬT TƯ

--- a/it_buy/frontend/.env
+++ b/it_buy/frontend/.env
@@ -1,2 +1,3 @@
 VITE_BASEURL = "https://localhost:44332"
 VITE_ESIGNURL = "https://localhost:44333"
+VITE_URL_REPORT = "https://localhost:44324/warehouse"
