--- a/it_buy/frontend/.env.production
+++ b/it_buy/frontend/.env.production
@@ -1,2 +1,3 @@
 VITE_BASEURL = "https://purchase.astahealthcare.com"
 VITE_ESIGNURL = "https://esign.astahealthcare.com"
+VITE_URL_REPORT = "https://report.astahealthcare.com/warehouse"
